added simple subscription endpoints
