# main.go
@@ -5,11 +5,9 @@ import (
 	"os/exec"
 	"runtime"
 
-	_ "notifier/docs" // This will be generated by swag
+	"notifier/internal/infrastructure/api"
 
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	_ "notifier/docs" // swagger docs
 )
 
 // @title Notifier API
@@ -19,13 +17,7 @@ import (
 // @BasePath /
 func main() {
 	// Create a new Gin router
-	router := gin.Default()
-
-	// Swagger documentation endpoint
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	// Home endpoint
-	router.GET("/home", homeHandler)
+	router := api.NewRouter()
 
 	// Start server in a goroutine
 	go func() {
@@ -61,15 +53,4 @@ func openBrowser(url string) {
 		fmt.Printf("Failed to open browser: %v\n", err)
 		fmt.Printf("Please open manually: %s\n", url)
 	}
-}
-
-// @Summary Home page
-// @Description Returns the home page message
-// @Tags home
-// @Accept json
-// @Produce plain
-// @Success 200 {string} string "This is my home page"
-// @Router /home [get]
-func homeHandler(c *gin.Context) {
-	c.String(200, "This is my home page")
 }
